Validate Java 21 as a third supported target JDK for cert-agent
Same spike as the Java 17 validation, this time via the live
cert-agent-deployer service's own auto-attach rather than manual
jattach: the existing, unmodified Java-11-built cert-agent.jar +
libcert_agent_stub.so retransforms KeyStore and captures a real
Tetragon/Kafka event on JDK 21 with no code changes.

The one real difference: JDK 21 prints a "Dynamic loading of agents
will be disallowed by default in a future release" warning on attach,
but attach still succeeds -- cosmetic today, not a blocker. Documented
this explicitly so it isn't mistaken for a failure, and noted it as
the one concrete forward-looking risk (a future JDK flipping that
default) worth re-checking later.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>